# stm32g031k8tx

./: .clangd  .gitmodules  CMakeLists.txt  LICENSE  init.ps1  readme.md  readme.txt
App/: STM32G031K8TX_FLASH.ld
App/Src/: main.c
cmake/: clang-arm.cmake  common.cmake  gcc-arm-none-eabi.cmake
cmake/stm32hal/: CMakeLists.txt
